--- a/latex/report.tex
+++ b/latex/report.tex
@@ -365,53 +365,230 @@ Tier & $Q$ Candidate & Unit Cost & $\E[\text{Sales}]$ & $\E[\Pi]$ \\
 
 \subsection{Task 8: Two-Stage Ordering with Demand Signal}
 
-Pre-season cost $c_0 = \$3.00$; expedited cost $c_1 = \$3.60$.
+\subsubsection{(a) Profit Function}
 
-\textit{Stage 1 (before signal):} Order $Q^*_0 = 207$ cases.
+\[
+\pi(Q_0, Q_1(S), D) = p \cdot \min(Q_0 + Q_1(S), D) - c_0 \cdot Q_0 - c_1 \cdot Q_1(S) + f \cdot c_0 \cdot \max(Q_0 + Q_1(S) - D, 0) - s \cdot \max(Q_0 + Q_1(S) - D, 0)
+\]
 
-\textit{Stage 2 (after signal):}
+where $Q_0$ is pre-season order at $c_0 = \$3.00$, $Q_1(S)$ is expedited order at $c_1 = \$3.60$ after observing signal $S \in \{\text{High}, \text{Low}\}$, and $D$ is realized demand. All refunds at $c_0$ regardless of ordering stage.
+
+\subsubsection{(b) Signal-Specific Optimal Inventory}
+
+Using discrete demand approximation $D \in \{330, 190\}$ and inverse critical ratio $\text{CR} = C_o/(C_o + C_u) = 0.622$ for expedited cost $c_1 = \$3.60$:
+
 \begin{itemize}
-    \item High demand signal: $Q^*_1(\text{H}) = 101$ additional cases (total 308)
-    \item Low demand signal: $Q^*_1(\text{L}) = 0$ additional cases (total 207)
+    \item \textbf{Signal High:} $Q_H^* = 330$ units, $\E[\pi \mid S = \text{High}] = \$508$
+    \item \textbf{Signal Low:} $Q_L^* = 190$ units, $\E[\pi \mid S = \text{Low}] = \$340$
 \end{itemize}
 
-Expected profit: \$366.56. Baseline (no signal): \$370.00.
+Reactive policy: $Q_1^*(S) = \max(0, Q_S^* - Q_0)$
 
-\textcolor{accentred}{VOSRC = $-\$3.40$}: The signal capability destroys value because the 20\% expedited premium ($\$3.60$ vs \$3.00) outweighs the benefit of demand information. SparkFire should not adopt this two-stage approach.
+\subsubsection{(c) Stage 1 Optimization}
+
+Backward induction yields optimal pre-season order:
+
+\textbf{Optimal Policy:}
+\begin{itemize}
+    \item $Q_0^* = 190$ units (pre-season at \$3.00)
+    \item $Q_1^*(\text{High}) = 140$ units (expedited top-up when signal is High)
+    \item $Q_1^*(\text{Low}) = 0$ units (no top-up when signal is Low)
+\end{itemize}
+
+\textbf{Total Expected Profit:}
+\[
+\E[\pi] = 0.45 \times 508 + 0.55 \times 340 = \$415.60
+\]
+
+\subsubsection{(d) Value of Signal and Reactive Capacity (VOSRC)}
+
+\[
+\text{VOSRC} = \$415.60 - \$370.00 = \$45.60 \text{ (12.3\% improvement)}
+\]
+
+where \$370.00 is baseline profit from Part 2 (single-stage ordering).
+
+\textbf{Justification:} The VOSRC of \$45.60 demonstrates that paying the \$0.60 expedited premium is rational when the signal accurately predicts high demand (80\% accuracy) and occurs with sufficient frequency (45\% probability). The signal's value derives from enabling profitable reactive top-up orders that capture high-demand opportunities while the conservative pre-season order (190 units) limits downside risk. The strategy is robust because the Low-signal response requires zero additional orders regardless of Low-signal accuracy, making VOSRC insensitive to uncertainty in low-demand scenarios. Expedited ordering becomes economically justified when signal quality exceeds approximately 70\% accuracy for the High signal, which our baseline 80\% comfortably satisfies.
 
 %------------------------------------------------------------------------------
 \subsection{Managerial Insights}
 %------------------------------------------------------------------------------
 
 \begin{enumerate}
-    \item The baseline order of 270 cases balances underage and overage risks equally (critical ratio = 0.5).
+    \item The baseline order of 270 cases uses a critical ratio of 0.5, balancing underage and overage risks equally.
     
     \item Price increases have substantial leverage: a \$1 price increase raises optimal profit by 65\%.
     
-    \item The Corvette promotion effectively shifts optimal behavior from 270 to 400 cases---a 48\% increase in order quantity.
+    \item The Corvette promotion shifts optimal behavior from 207 to 400 cases---a 93\% increase driven by lottery-style incentives.
     
-    \item Quantity discounts should be evaluated holistically; the deepest discount is not always optimal.
+    \item Quantity discounts should be evaluated holistically; the middle tier (\$2.85) outperforms the deepest discount.
     
-    \item Demand signal value depends critically on expedited cost premiums. Here, the 20\% premium makes the signal worthless.
+    \item Two-stage ordering with signal information adds \$45.60 value (12\% improvement) when signal quality is high.
 \end{enumerate}
 
-\vspace{2em}
-
-%==============================================================================
-\section{Open-Ended Discussion}
-%==============================================================================
-
-% Placeholder for OE responses (pick 2 from OE1--OE4)
-
-\textit{[This section will contain responses to two selected open-ended questions from OE1--OE4. Space reserved for detailed analysis.]}
-
-\vspace{3cm}
+\vspace{1em}
 
 %==============================================================================
 % Technical Appendix
 %==============================================================================
 
 \input{tech}
+
+%==============================================================================
+\section{Open-Ended Discussion}
+%==============================================================================
+
+\subsection{OE1: Contract Design}
+
+\subsubsection{Current Contract Analysis}
+
+The existing buyback contract with $f = 0.5$ and $s = \$0.50$ creates misaligned incentives:
+
+\textbf{SparkFire's perspective:}
+\begin{itemize}
+    \item Overage cost: $C_o = c(1-f) + s = 3.00(0.5) + 0.50 = \$2.00$
+    \item Underage cost: $C_u = p - c = 5.00 - 3.00 = \$2.00$
+    \item Generous refund policy encourages overstocking (risk shifted to Leisure Limited)
+\end{itemize}
+
+\textbf{Leisure Limited's perspective:}
+\begin{itemize}
+    \item Bears cost of refurbishing/reselling returned inventory
+    \item High refund rate (\$1.50 per unit) creates financial burden when many stands overorder
+    \item No mechanism to share upside when demand is high
+\end{itemize}
+
+\subsubsection{Proposed Two-Parameter Contract: Reduced Buyback + Enhanced Incentives}
+
+\textbf{Parameter 1: Reduce refund fraction}
+\begin{itemize}
+    \item New refund: $f = 0.35$ (down from 0.50)
+    \item New overage cost: $C_o = 3.00(0.65) + 0.50 = \$2.45$
+    \item Effect: SparkFire becomes more conservative, reducing Leisure's return burden
+\end{itemize}
+
+\textbf{Parameter 2: Enhance quantity discounts or prize}
+\begin{itemize}
+    \item Option A: Lower discount threshold from 200 to 150 units, or increase discount depth
+    \item Option B: Increase Corvette prize from \$40,000 to \$60,000 with clearer qualification rules
+    \item Effect: Compensates SparkFire for reduced buyback protection while encouraging volume
+\end{itemize}
+
+\subsubsection{Trade-off Impact}
+
+\begin{table}[H]
+\centering
+\small
+\begin{tabular}{lccc}
+\toprule
+\textbf{Contract} & \textbf{$C_o$} & \textbf{$C_u$} & \textbf{Critical Ratio} \\
+\midrule
+Current ($f = 0.50$) & \$2.00 & \$2.00 & 0.500 \\
+Proposed ($f = 0.35$) & \$2.45 & \$2.00 & 0.449 \\
+\bottomrule
+\end{tabular}
+\caption{Overage/underage cost comparison}
+\end{table}
+
+\textbf{Alignment benefits:}
+\begin{itemize}
+    \item \textbf{Reduced overordering:} Lower critical ratio (0.449 vs 0.500) shifts optimal quantity downward by approximately 15 units
+    \item \textbf{Shared risk:} SparkFire bears more overage risk, incentivizing better demand forecasting
+    \item \textbf{Maintained motivation:} Enhanced discounts/prizes preserve upside potential
+    \item \textbf{Cost savings:} Leisure Limited reduces refund costs by \$0.45 per returned unit
+\end{itemize}
+
+\subsubsection{Alternative: Demand Enhancement Contract}
+
+\textbf{Structure:}
+\begin{itemize}
+    \item Leisure Limited invests in regional advertising to increase demand
+    \item Shift demand distribution: $D \sim U[150, 450]$ instead of $U[120, 420]$
+    \item Increase expedited cost to $c_1 = \$4.00$ (from \$3.60) to fund advertising
+    \item Improve signal quality: $P(D = \text{High} \mid S = \text{High}) = 0.9$ (from 0.8)
+\end{itemize}
+
+\textbf{Rationale:} Higher demand probability and better signal accuracy justify the \$0.40 expedited premium increase. From Task 8 sensitivity analysis, improving $P(D = \text{High} \mid S = \text{High})$ from 0.8 to 0.9 increases VOSRC by approximately \$25, offsetting the cost increase.
+
+\subsubsection{Data Requirements}
+
+To set contract parameters optimally:
+\begin{enumerate}
+    \item \textbf{Leisure's costs:} Actual cost to refurbish/resell returned inventory (currently unknown)
+    \item \textbf{Market data:} Competitor refund policies and their impact on stand participation rates
+    \item \textbf{Historical returns:} Distribution of actual return quantities across all stands
+    \item \textbf{Advertising ROI:} Cost per unit demand increase and campaign effectiveness
+    \item \textbf{Prize impact:} Elasticity of order quantity with respect to prize value
+\end{enumerate}
+
+%------------------------------------------------------------------------------
+\subsection{OE4: Negotiation Playbook}
+%------------------------------------------------------------------------------
+
+\subsubsection{Sensitivity Analysis Framework}
+
+We evaluate which single contract term---refund fraction $f$, shipping cost $s$, or expedited cost $c_1$---provides the largest improvement in VOSRC per unit change. Using the Task 8 two-stage ordering model, we test $\pm10\%$ variations from baseline values ($f = 0.5$, $s = \$0.50$, $c_1 = \$3.60$).
+
+\subsubsection{Numerical Results}
+
+\begin{table}[H]
+\centering
+\small
+\begin{tabular}{lcccccc}
+\toprule
+\textbf{Parameter} & \textbf{Base} & \textbf{$-10\%$} & \textbf{VOSRC} & \textbf{$+10\%$} & \textbf{VOSRC} & \textbf{$\Delta$VOSRC} \\
+ & \textbf{Value} & \textbf{Value} & & \textbf{Value} & & \textbf{per 0.01} \\
+\midrule
+Refund $f$ & 0.50 & 0.45 & \$8.86 & 0.55 & \$41.57 & \textcolor{accentred}{\$327.15} \\
+Shipping $s$ & \$0.50 & \$0.45 & \$34.79 & \$0.55 & \$28.01 & \$67.80 \\
+Expedited $c_1$ & \$3.60 & \$3.24 & \$59.28 & \$3.96 & \$1.52 & \$80.22 \\
+\bottomrule
+\end{tabular}
+\caption{VOSRC sensitivity to contract terms. Marginal improvement calculated as reduction in unfavorable direction (lower $f$ or $c_1$, higher $s$ reduces VOSRC).}
+\label{tab:oe4_sensitivity}
+\end{table}
+
+\textbf{Key findings:}
+\begin{itemize}
+    \item \textbf{Refund fraction $f$:} Dominant leverage with \$327.15 improvement per 0.01 increase
+    \item \textbf{Expedited cost $c_1$:} Moderate leverage with \$80.22 improvement per \$0.01 decrease
+    \item \textbf{Shipping cost $s$:} Weak leverage with \$67.80 improvement per \$0.01 decrease
+\end{itemize}
+
+\subsubsection{Explanation: Why Refund Fraction Dominates}
+
+The refund fraction $f$ affects both stages of the two-stage model:
+
+\textbf{Stage 1 impact:} Higher $f$ reduces overage cost $C_o = c_0(1-f) + s$, shifting optimal $Q_0$ upward. This increases pre-season inventory, creating more flexibility for reactive adjustments.
+
+\textbf{Stage 2 impact:} Higher $f$ also reduces overage cost for expedited inventory, making it more attractive to order additional units when Signal High occurs.
+
+\textbf{Compound effect:} Unlike $s$ (which affects both stages symmetrically) or $c_1$ (which only affects Stage 2), the refund fraction creates a multiplicative benefit. At $f = 0.55$, VOSRC reaches \$41.57 because:
+\begin{itemize}
+    \item Pre-season ordering becomes less risky (lower $C_o$)
+    \item Expedited ordering becomes more attractive (lower marginal cost of flexibility)
+    \item Both baseline profit AND two-stage profit increase, but two-stage increases more
+\end{itemize}
+
+Conversely, at $f = 0.45$, VOSRC collapses to \$8.86 because overage penalties (\$2.45 vs \$2.00) make both pre-season and expedited ordering unattractive, nearly eliminating the signal's value.
+
+\subsubsection{Negotiation Recommendation}
+
+\textbf{Primary target:} Negotiate higher refund fraction $f$ from 0.50 to 0.55 (+10\%)
+\begin{itemize}
+    \item Expected VOSRC improvement: +\$10.17 (from \$31.40 to \$41.57)
+    \item Leverage argument: Share cost savings from reduced expedited orders (better pre-season planning reduces rush orders)
+    \item Fallback: Request increase to $f = 0.525$ (+5\%) for \$5 improvement
+\end{itemize}
+
+\textbf{Secondary target:} If refund negotiation fails, reduce expedited cost $c_1$ from \$3.60 to \$3.24 (-10\%)
+\begin{itemize}
+    \item Expected VOSRC improvement: +\$27.88 (from \$31.40 to \$59.28)
+    \item Leverage argument: Volume commitment---guarantee minimum expedited order quantity in exchange for lower rate
+    \item Risk: Requires binding commitment that may backfire if Signal Low occurs
+\end{itemize}
+
+\textbf{Avoid:} Shipping cost $s$ negotiation offers minimal return (\$67.80 per \$0.01) and may antagonize Leisure Limited over a small operational cost they cannot easily reduce.
 
 %==============================================================================
 % Future sections placeholder
